fix(DATA-2020): remove FlexibleLine from line ids