@@ -3,16 +3,13 @@ package no.rutebanken.anshar.data;
 import com.hazelcast.scheduledexecutor.IScheduledExecutorService;
 import jakarta.xml.bind.JAXBException;
 import jakarta.xml.bind.UnmarshalException;
-import no.rutebanken.anshar.api.GtfsRTApi;
 import no.rutebanken.anshar.config.IncomingSiriParameters;
 import no.rutebanken.anshar.data.frGeneralMessageStructure.Content;
 import no.rutebanken.anshar.data.util.CustomSiriXml;
 import no.rutebanken.anshar.helpers.TestObjectFactory;
 import no.rutebanken.anshar.integration.SpringBootBaseTest;
-import no.rutebanken.anshar.routes.mapping.LineUpdaterService;
 import no.rutebanken.anshar.routes.siri.handlers.SiriHandler;
 import no.rutebanken.anshar.routes.siri.handlers.inbound.SituationExchangeInbound;
-import no.rutebanken.anshar.subscription.SubscriptionConfig;
 import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
@@ -26,38 +23,28 @@ import java.io.FileNotFoundException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.time.ZonedDateTime;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class GeneralMessageTest extends SpringBootBaseTest {
 
     @Autowired
-    private GeneralMessages generalMessages;
-
-    @Autowired
-    private GeneralMessagesCancellations generalMessagesCancellations;
-
-    @Autowired
-    private SiriHandler handler;
-
-    @Autowired
-    private SubscriptionConfig subscriptionConfig;
-
-    @Autowired
-    private LineUpdaterService lineupdaterService;
-
-    @Autowired
-    private SituationExchangeInbound situationExchangeInbound;
-
-    @Autowired
-    private Situations situations;
-
-
-    @Autowired
     @Qualifier("getSharedScheduler")
     IScheduledExecutorService sharedScheduler;
-
+    @Autowired
+    private GeneralMessages generalMessages;
+    @Autowired
+    private GeneralMessagesCancellations generalMessagesCancellations;
+    @Autowired
+    private SiriHandler handler;
+    @Autowired
+    private SituationExchangeInbound situationExchangeInbound;
+    @Autowired
+    private Situations situations;
 
     @BeforeEach
     public void init() {
@@ -76,7 +63,7 @@ public class GeneralMessageTest extends SpringBootBaseTest {
         int previousSize = generalMessages.getAll().size();
         GeneralMessage msg = TestObjectFactory.createGeneralMessage();
         generalMessages.add("test", msg);
-        assertTrue(generalMessages.getAll().size() == previousSize + 1);
+        assertEquals(generalMessages.getAll().size(), previousSize + 1);
     }
 
     @Test
@@ -314,98 +301,13 @@ public class GeneralMessageTest extends SpringBootBaseTest {
 
     }
 
-
-    @Test
-    public void testFlexibleLineConversion() throws UnmarshalException {
-        String flexibleLineId = "PROV1:Line:35";
-        String standardlineId = "PROV2:Line:AAA";
-
-        List<GtfsRTApi> gtfsApis = new ArrayList<>();
-        GtfsRTApi api1 = new GtfsRTApi();
-        api1.setDatasetId("PROV1");
-        GtfsRTApi api2 = new GtfsRTApi();
-        api2.setDatasetId("PROV2");
-        gtfsApis.add(api1);
-        gtfsApis.add(api2);
-
-        subscriptionConfig.setGtfsRTApis(gtfsApis);
-
-        Map<String, Boolean> flexibleLineMap = new HashMap<>();
-        flexibleLineMap.put(flexibleLineId, true);
-        flexibleLineMap.put(standardlineId, false);
-        lineupdaterService.addFlexibleLines(flexibleLineMap);
-
-        String datasetId = "DATASET1";
-
-        GeneralMessage genMess1 = TestObjectFactory.createGeneralMessage();
-        addLineRef(genMess1, standardlineId);
-
-        GeneralMessage genMess2 = TestObjectFactory.createGeneralMessage();
-        addLineRef(genMess2, flexibleLineId);
-        generalMessages.add(datasetId, genMess1);
-        generalMessages.add(datasetId, genMess2);
-
-        Collection<GeneralMessage> gms = generalMessages.getAll();
-        assertFalse(gms.isEmpty());
-
-
-        String stringXml = "<?xml version=\"1.0\" encoding=\"utf-8\"?>\n" +
-                "<Siri xmlns=\"http://www.siri.org.uk/siri\" xmlns:ns2=\"http://www.ifopt.org.uk/acsb\" xmlns:ns3=\"http://www.ifopt.org.uk/ifopt\" xmlns:ns4=\"http://datex2.eu/schema/2_0RC1/2_0\" version=\"2.0\">\n" +
-                "    <ServiceRequest>\n" +
-                "        <RequestorRef>#RequestorREF#12EFS1aaa-2</RequestorRef>\n" +
-                "        <GeneralMessageRequest version=\"2.0\">\n" +
-                "        </GeneralMessageRequest>\n" +
-                "    </ServiceRequest>\n" +
-                "</Siri>";
-
-
-        InputStream xml = IOUtils.toInputStream(stringXml, StandardCharsets.UTF_8);
-
-
-        IncomingSiriParameters params = new IncomingSiriParameters();
-        params.setIncomingSiriStream(xml);
-        params.setDatasetId("DATASET1");
-        params.setOutboundIdMappingPolicy(SiriHandler.getIdMappingPolicy("true", "false"));
-        params.setMaxSize(-1);
-        Siri response = handler.handleIncomingSiri(params);
-        assertNotNull(response.getServiceDelivery());
-
-        assertNotNull(response.getServiceDelivery().getGeneralMessageDeliveries());
-        assertTrue(response.getServiceDelivery().getGeneralMessageDeliveries().size() > 0);
-
-        for (GeneralMessageDeliveryStructure generalMessageDelivery : response.getServiceDelivery().getGeneralMessageDeliveries()) {
-            for (GeneralMessage generalMessage : generalMessageDelivery.getGeneralMessages()) {
-                Content cont = (Content) generalMessage.getContent();
-                String lineRef = cont.getLineRefs().get(0);
-                if (lineRef.startsWith("PROV1")) {
-                    assertEquals("PROV1:FlexibleLine:35", lineRef);
-                } else {
-                    assertEquals(standardlineId, lineRef);
-                }
-
-            }
-
-        }
-
-    }
-
-    private void addLineRef(GeneralMessage genMess1, String lineId) {
-
-        Content content = new Content();
-        List<String> lineRefs = new ArrayList<>();
-        lineRefs.add(lineId);
-        content.setLineRefs(lineRefs);
-        genMess1.setContent(content);
-
-    }
-
     @Test
     public void testUpdate() {
 
 
         GeneralMessage msg = TestObjectFactory.createGeneralMessage();
         Content content1 = new Content();
-        content1.setStopPointRefs(Arrays.asList("stop1"));
+        content1.setStopPointRefs(List.of("stop1"));
         msg.setContent(content1);
 
         //adding gm with 1 stopRef
@@ -955,21 +857,21 @@ public class GeneralMessageTest extends SpringBootBaseTest {
     public void testChannelFilter() {
         GeneralMessage msg = TestObjectFactory.createGeneralMessage();
         Content content1 = new Content();
-        content1.setStopPointRefs(Arrays.asList("stop1"));
+        content1.setStopPointRefs(List.of("stop1"));
         msg.setContent(content1);
 
         //adding gm with 1 stopRef
         generalMessages.add("test", msg);
-        assertTrue(generalMessages.getAll().size() == 1);
+        assertEquals(1, generalMessages.getAll().size());
 
         InfoChannelRefStructure infoChannelRefStructure = new InfoChannelRefStructure();
         infoChannelRefStructure.setValue("Information");
-        Siri siri = generalMessages.createServiceDelivery("reqRef", null, "name", 20, Arrays.asList(infoChannelRefStructure));
+        Siri siri = generalMessages.createServiceDelivery("reqRef", null, "name", 20, List.of(infoChannelRefStructure));
         assertEquals(0, getGeneralMessagesFromSiri(siri).size(), "Delevery should be empty because a 'perturbation' message was added to the cache and we are asking for 'information' messages");
 
 
         infoChannelRefStructure.setValue("Perturbation");
-        siri = generalMessages.createServiceDelivery("reqRef", "test", "name", 20, Arrays.asList(infoChannelRefStructure));
+        siri = generalMessages.createServiceDelivery("reqRef", "test", "name", 20, List.of(infoChannelRefStructure));
         assertEquals(1, getGeneralMessagesFromSiri(siri).size(), "Delevery should return the msg because we are asking the correct channel");
     }
 
@@ -977,21 +879,21 @@ public class GeneralMessageTest extends SpringBootBaseTest {
     public void testDatasetFilter() {
         GeneralMessage msg = TestObjectFactory.createGeneralMessage();
         Content content1 = new Content();
-        content1.setStopPointRefs(Arrays.asList("stop1"));
+        content1.setStopPointRefs(List.of("stop1"));
         msg.setContent(content1);
 
         //adding gm with 1 stopRef
         generalMessages.add("test", msg);
-        assertTrue(generalMessages.getAll().size() == 1);
+        assertEquals(1, generalMessages.getAll().size());
 
         InfoChannelRefStructure infoChannelRefStructure = new InfoChannelRefStructure();
         infoChannelRefStructure.setValue("Perturbation");
 
-        Siri siri = generalMessages.createServiceDelivery("reqRef", "wrongDataset", "name", 20, Arrays.asList(infoChannelRefStructure));
+        Siri siri = generalMessages.createServiceDelivery("reqRef", "wrongDataset", "name", 20, List.of(infoChannelRefStructure));
         assertEquals(0, getGeneralMessagesFromSiri(siri).size(), "Delevery should be empty because a  message was added to the cache with datasetId 'test' and we are asking for dataset 'wrongDataset'");
 
 
-        siri = generalMessages.createServiceDelivery("reqRef", "test", "name", 20, Arrays.asList(infoChannelRefStructure));
+        siri = generalMessages.createServiceDelivery("reqRef", "test", "name", 20, List.of(infoChannelRefStructure));
         assertEquals(1, getGeneralMessagesFromSiri(siri).size(), "Delevery should return the msg because we are asking the correct datasetId");
     }
 
@@ -999,12 +901,12 @@ public class GeneralMessageTest extends SpringBootBaseTest {
     public void testLumiplanFormat() {
         GeneralMessage msg = TestObjectFactory.createGeneralMessage();
         Content content1 = new Content();
-        content1.setStopPointRefs(Arrays.asList("stop1"));
+        content1.setStopPointRefs(List.of("stop1"));
         msg.setContent(content1);
 
         //adding gm with 1 stopRef
         generalMessages.add("test", msg);
-        assertTrue(generalMessages.getAll().size() == 1);
+        assertEquals(1, generalMessages.getAll().size());
 
         Siri siri = generalMessages.createServiceDelivery("test", "test", "name", 20, new ArrayList<>());
 
@@ -1022,7 +924,7 @@ public class GeneralMessageTest extends SpringBootBaseTest {
 
         GeneralMessage msg = TestObjectFactory.createGeneralMessage();
         Content content1 = new Content();
-        content1.setStopPointRefs(Arrays.asList("stop1"));
+        content1.setStopPointRefs(List.of("stop1"));
         msg.setContent(content1);
 
         //adding gm with 1 stopRef
@@ -1044,7 +946,6 @@ public class GeneralMessageTest extends SpringBootBaseTest {
                 "</Siri>";
 
         InputStream xml = IOUtils.toInputStream(stringXml, StandardCharsets.UTF_8);
-        ;
 
         IncomingSiriParameters params = new IncomingSiriParameters();
         params.setIncomingSiriStream(xml);
